cmake_minimum_required(VERSION 3.20)

set(PROJECT grapher)

enable_language(C CXX)

project(
	${PROJECT} 
	LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 11)

set(GRAPHER_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(GRAPHER_LIBRARIES grapher)

file(GLOB_RECURSE GRAPHER_SRC
	${CMAKE_CURRENT_SOURCE_DIR}/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/ PREFIX / FILES ${GRAPHER_SRC})

if (BUILD_SHARED_LIBS)
	set(USE_MSVC_RUNTIME_LIBRARY_DLL ON CACHE BOOL "" FORCE)
	add_library(${PROJECT} ${GRAPHER_SRC})
	target_compile_definitions(${PROJECT} INTERFACE BUILD_GRAPHER_SHARED_LIBS)
	target_compile_definitions(${PROJECT} PRIVATE BUILD_IMGUI_PACK_SHARED_LIBS)	
	set_target_properties(${PROJECT} PROPERTIES POSITION_INDEPENDENT_CODE ON)
else()
	set(USE_MSVC_RUNTIME_LIBRARY_DLL OFF CACHE BOOL "" FORCE)
	add_library(${PROJECT} STATIC ${GRAPHER_SRC})
endif()

target_include_directories(${PROJECT} PRIVATE 
	${IMGUIPACK_INCLUDE_DIRS}
	${GRAPHER_INCLUDE_DIR}
	${EZLIBS_INCLUDE_DIR}
)

target_link_libraries(${PROJECT}
	${IMGUIPACK_LIBRARIES}
)
