cmake_minimum_required(VERSION 3.20)

set(PROJECT grapher)

enable_language(C CXX)

project(
	${PROJECT} 
	LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 11)

set(GRAPHER_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)
set(GRAPHER_LIBRARIES ${PROJECT} PARENT_SCOPE)

if(USE_SHARED_LIBS)
	set(BUILD_SHARED_LIBS ON CACHE BOOL "" FORCE)
	set(LLVM_USE_CRT_DEBUG MDd CACHE STRING "" FORCE)
	set(LLVM_USE_CRT_MINSIZEREL MD CACHE STRING "" FORCE)
	set(LLVM_USE_CRT_RELEASE MD CACHE STRING "" FORCE)
	set(LLVM_USE_CRT_RELWITHDEBINFO MD CACHE STRING "" FORCE)
	set(USE_MSVC_RUNTIME_LIBRARY_DLL ON CACHE BOOL "" FORCE)
else()
	set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
	set(LLVM_USE_CRT_DEBUG MTd CACHE STRING "" FORCE)
	set(LLVM_USE_CRT_MINSIZEREL MT CACHE STRING "" FORCE)
	set(LLVM_USE_CRT_RELEASE MT CACHE STRING "" FORCE)
	set(LLVM_USE_CRT_RELWITHDEBINFO MT CACHE STRING "" FORCE)
	set(USE_MSVC_RUNTIME_LIBRARY_DLL OFF CACHE BOOL "" FORCE)
endif()

if(NOT CMAKE_DEBUG_POSTFIX)
  set(CMAKE_DEBUG_POSTFIX _debug)
endif()
if(NOT CMAKE_RELEASE_POSTFIX)
  set(CMAKE_RELEASE_POSTFIX)
endif()
if(NOT CMAKE_MINSIZEREL_POSTFIX)
  set(CMAKE_MINSIZEREL_POSTFIX _minsizerel)
endif()
if(NOT CMAKE_RELWITHDEBINFO_POSTFIX)
  set(CMAKE_RELWITHDEBINFO_POSTFIX _reldeb)
endif()

file(GLOB_RECURSE GRAPHER_SRC
	${CMAKE_CURRENT_SOURCE_DIR}/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/ PREFIX / FILES ${GRAPHER_SRC})

if (BUILD_SHARED_LIBS)
	add_library(${PROJECT} ${GRAPHER_SRC})
	target_compile_definitions(${PROJECT} INTERFACE BUILD_GRAPHER_SHARED_LIBS)
	target_compile_definitions(${PROJECT} PRIVATE BUILD_IMGUI_PACK_SHARED_LIBS)	
	set_target_properties(${PROJECT} PROPERTIES POSITION_INDEPENDENT_CODE ON)
else()
	add_library(${PROJECT} STATIC ${GRAPHER_SRC})
endif()

target_include_directories(${PROJECT} PRIVATE 
	${IMGUIPACK_INCLUDE_DIRS}
	${GRAPHER_INCLUDE_DIR}
	${EZLIBS_INCLUDE_DIR}
)

target_link_libraries(${PROJECT}
	${IMGUIPACK_LIBRARIES}
)
